Finalisation du projet

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             </div>
         </div>
         <nav>
-            <a href="#accueil"><img src="media/image/logo.PNG" alt="Logo Entreprise"></a>
-            <a href="#Liga">Homme</a>
-            <a href="#Bundesliga">Femme</a>
-            <a href="#PremierLeague">Enfant</a>
-            <a href="#Ligue1">Box Mystère</a>
+            <a href="index.html"><img src="media/image/logo.PNG" alt="Logo Entreprise"></a>
+            <a href="pages/boutique.html">Nouveautés</a>
+            <a href="pages/boutique.html">Hommes</a>
+            <a href="pages/boutique.html">Femmes</a>
+            <a href="pages/panier.html">Panier</a>
             <a href="pages/nous-contacter.html">Contact</a>
         </nav>
     </div>
@@ -70,7 +70,7 @@
             <div class="offre-content">
                 <h1>Foot Jersey : OFFRE DE DINGUE OMG ! -99%</h1>
                 <p>Un maillot offert à l'achat d'un ensemble !</p>
-                <a href="pages/boutique.html" class="button">Découvres nos offres !</a>
+                <a href="pages/fiche-produit.html" class="button">Découvres nos offres !</a>
             </div>
         </div>
         
@@ -81,22 +81,22 @@
         </section>
         <div class="conteneur">
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotReal.png" alt="Maillot Real"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotReal.png" alt="Maillot Real"></a>
                 <p>Maillot Real Madrid - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
@@ -109,22 +109,22 @@
         </section>
         <div class="conteneur">
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
@@ -137,22 +137,22 @@
         </section>
         <div class="conteneur">
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotUnited.png" alt="Maillot Manchester United"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotUnited.png" alt="Maillot Manchester United"></a>
                 <p>Maillot Manchester United - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotArsenal.png" alt="Maillot Arsenal"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotArsenal.png" alt="Maillot Arsenal"></a>
                 <p>Maillot Arsenal - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
@@ -165,22 +165,22 @@
         </section>
         <div class="conteneur">
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotLosc.png" alt="Maillot Losc"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotLosc.png" alt="Maillot Losc"></a>
                 <p>Maillot LOSC - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotMonaco.png" alt="Maillot Monaco"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotMonaco.png" alt="Maillot Monaco"></a>
                 <p>Maillot AS Monaco - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotOm.png" alt="Maillot Om"></a>
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotOm.png" alt="Maillot Om"></a>
                 <p>Maillot Olympique Marseille - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="blabla"><img src="media/image/maillot/maillotCaen.png" alt="Maillot Caen">
+                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotCaen.png" alt="Maillot Caen">
                 <p>Maillot Caen - Homme</p>
                 <h3>€20.50-€30.50</h3></a>
             </section>
