--- a/pages/credits.html
+++ b/pages/credits.html
@@ -3,79 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/credits.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../style/styleAccueil.css">
+    <link rel="stylesheet" href="../style/credits.css">
     <title>Foot Jersey - Crédits</title>
 </head>
 <body>
-<div class="test">
-    <div class="carousel">
-        <div class="carousel-track">
-            <img src="../media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne">
-            <img src="../media/image/maillot/maillotLosc.png" alt="Maillot Losc">
-            <img src="../media/image/maillot/maillotMonaco.png" alt="Maillot Monaco">
-            <img src="../media/image/maillot/maillotOm.png" alt="Maillot Om">
-            <img src="../media/image/maillot/maillotReal.png" alt="Maillot Real">
-            <img src="../media/image/maillot/maillotJuventus.png" alt="Maillot Juventus">
-            <img src="../media/image/maillot/maillotCaen.png" alt="Maillot Caen">
-            <img src="../media/image/maillot/maillotUnited.png" alt="Maillot Manchester United">
-            <img src="../media/image/maillot/maillotSantos.png" alt="Maillot Santos">
-            <img src="../media/image/maillot/maillotStrasbourg.png" alt="Maillot Strasbourg">
-            <img src="../media/image/maillot/maillotAlNasser.png" alt="Maillot Al Nasser">
-            <img src="../media/image/maillot/maillotRiverPlate.png" alt="Maillot River Plate">
-            <img src="../media/image/maillot/maillotLyon.png" alt="Maillot Lyon">
-            <img src="../media/image/maillot/maillotArsenal.png" alt="Maillot Arsenal">
-            <img src="../media/image/maillot/maillotItalie.png" alt="Maillot Italie">
-            <img src="../media/image/maillot/maillotBenfica.png" alt="Maillot Benfica">
-            <img src="../media/image/maillot/maillotComores.png" alt="Maillot Les Comores">
-            <img src="../media/image/maillot/maillotBayern.png" alt="Maillot Bayern">
-            <img src="../media/image/maillot/maillotMiami.png" alt="Maillot Miami">
-            <!-- Pour la boucle infinie, on duplique les images -->
-            <img src="../media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne">
-            <img src="../media/image/maillot/maillotLosc.png" alt="Maillot Losc">
-            <img src="../media/image/maillot/maillotMonaco.png" alt="Maillot Monaco">
-            <img src="../media/image/maillot/maillotOm.png" alt="Maillot Om">
-            <img src="../media/image/maillot/maillotReal.png" alt="Maillot Real">
-            <img src="../media/image/maillot/maillotJuventus.png" alt="Maillot Juventus">
-            <img src="../media/image/maillot/maillotCaen.png" alt="Maillot Caen">
-            <img src="../media/image/maillot/maillotUnited.png" alt="Maillot Manchester United">
-            <img src="../media/image/maillot/maillotSantos.png" alt="Maillot Santos">
-            <img src="../media/image/maillot/maillotStrasbourg.png" alt="Maillot Strasbourg">
-            <img src="../media/image/maillot/maillotAlNasser.png" alt="Maillot Al Nasser">
-            <img src="../media/image/maillot/maillotRiverPlate.png" alt="Maillot River Plate">
-            <img src="../media/image/maillot/maillotLyon.png" alt="Maillot Lyon">
-            <img src="../media/image/maillot/maillotArsenal.png" alt="Maillot Arsenal">
-            <img src="../media/image/maillot/maillotItalie.png" alt="Maillot Italie">
-            <img src="../media/image/maillot/maillotBenfica.png" alt="Maillot Benfica">
-            <img src="../media/image/maillot/maillotComores.png" alt="Maillot Les Comores">
-            <img src="../media/image/maillot/maillotBayern.png" alt="Maillot Bayern">
-            <img src="../media/image/maillot/maillotMiami.png" alt="Maillot Miami">
+    
+    <div class="test">
+        <div class="carousel">
+            <div class="carousel-track">
+                <img src="../media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne">
+                <img src="../media/image/maillot/maillotLosc.png" alt="Maillot Losc">
+                <img src="../media/image/maillot/maillotMonaco.png" alt="Maillot Monaco">
+                <img src="../media/image/maillot/maillotOm.png" alt="Maillot Om">
+                <img src="../media/image/maillot/maillotReal.png" alt="Maillot Real">
+                <img src="../media/image/maillot/maillotJuventus.png" alt="Maillot Juventus">
+                <img src="../media/image/maillot/maillotCaen.png" alt="Maillot Caen">
+                <img src="../media/image/maillot/maillotUnited.png" alt="Maillot Manchester United">
+                <img src="../media/image/maillot/maillotSantos.png" alt="Maillot Santos">
+                <img src="../media/image/maillot/maillotStrasbourg.png" alt="Maillot Strasbourg">
+                <img src="../media/image/maillot/maillotAlNasser.png" alt="Maillot Al Nasser">
+                <img src="../media/image/maillot/maillotRiverPlate.png" alt="Maillot River Plate">
+                <img src="../media/image/maillot/maillotLyon.png" alt="Maillot Lyon">
+                <img src="../media/image/maillot/maillotArsenal.png" alt="Maillot Arsenal">
+                <img src="../media/image/maillot/maillotItalie.png" alt="Maillot Italie">
+                <img src="../media/image/maillot/maillotBenfica.png" alt="Maillot Benfica">
+                <img src="../media/image/maillot/maillotComores.png" alt="Maillot Les Comores">
+                <img src="../media/image/maillot/maillotBayern.png" alt="Maillot Bayern">
+                <img src="../media/image/maillot/maillotMiami.png" alt="Maillot Miami">
+                <!-- Pour la boucle infinie, on duplique les images -->
+                <img src="../media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne">
+                <img src="../media/image/maillot/maillotLosc.png" alt="Maillot Losc">
+                <img src="../media/image/maillot/maillotMonaco.png" alt="Maillot Monaco">
+                <img src="../media/image/maillot/maillotOm.png" alt="Maillot Om">
+                <img src="../media/image/maillot/maillotReal.png" alt="Maillot Real">
+                <img src="../media/image/maillot/maillotJuventus.png" alt="Maillot Juventus">
+                <img src="../media/image/maillot/maillotCaen.png" alt="Maillot Caen">
+                <img src="../media/image/maillot/maillotUnited.png" alt="Maillot Manchester United">
+                <img src="../media/image/maillot/maillotSantos.png" alt="Maillot Santos">
+                <img src="../media/image/maillot/maillotStrasbourg.png" alt="Maillot Strasbourg">
+                <img src="../media/image/maillot/maillotAlNasser.png" alt="Maillot Al Nasser">
+                <img src="../media/image/maillot/maillotRiverPlate.png" alt="Maillot River Plate">
+                <img src="../media/image/maillot/maillotLyon.png" alt="Maillot Lyon">
+                <img src="../media/image/maillot/maillotArsenal.png" alt="Maillot Arsenal">
+                <img src="../media/image/maillot/maillotItalie.png" alt="Maillot Italie">
+                <img src="../media/image/maillot/maillotBenfica.png" alt="Maillot Benfica">
+                <img src="../media/image/maillot/maillotComores.png" alt="Maillot Les Comores">
+                <img src="../media/image/maillot/maillotBayern.png" alt="Maillot Bayern">
+                <img src="../media/image/maillot/maillotMiami.png" alt="Maillot Miami">
+            </div>
         </div>
+        <nav>
+            <a href="../index.html"><img src="../media/image/logo.PNG" alt="Logo Entreprise"></a>
+            <a href="pages/boutique.html">Nouveautés</a>
+            <a href="pages/boutique.html">Hommes</a>
+            <a href="pages/boutique.html">Femmes</a>
+            <a href="../pages/panier.html">Panier</a>
+            <a href="../pages/nous-contacter.html">Contact</a>
+        </nav>
     </div>
-    <nav>
-        <a href="../index.html"><img src="../media/image/logo.PNG" alt="Logo Entreprise"></a>
-        <a href="pages/boutique.html">Nouveautés</a>
-        <a href="pages/boutique.html">Hommes</a>
-        <a href="pages/boutique.html">Femmes</a>
-        <a href="pages/boutique.html">Enfants</a>
-        <a href="#contacts">Contact</a>
-    </nav>
-</div>
-    <h1>Mentions Legales</h1>
-    <h2>Ce site est édité par :</h2>
-    <p>BLABLABLA</p>
-    <p>BLABLABLA</p>
-    <p>BLABLABLA</p>
+    <main>
+        <h1>Mentions Legales</h1>
+        <h2>1. Éditeur du site</h2>
+        <p>Le site www.footjersey.com (ci-après "le Site") est édité par la société FootJersey SAS, une société par actions simplifiée au capital de 10 000 euros, immatriculée au Registre du Commerce et des Sociétés de Paris sous le numéro 123 456 789 RCS Paris.</p>
+        <p>Siège social : 14 Rue des Champions, 75010 Paris, France</p>
+        <p>Téléphone : +33 (0)1 23 45 67 89</p>
+        <p>Email : contact@footjersey.com</p>
+        <p>Directeurs de la publication : Wallace Verron et Melisa Yilmaz</p>
 
-    <h2>Ce site est hébergé par :</h2>
-    <p>BLABLABLA</p>
-    <p>BLABLABLA</p>
-    <p>BLABLABLA</p>
+        <h2>2. Hébergement</h2>
+        <p>Le Site est hébergé par la société WebPulse Hosting, une entreprise spécialisée dans l’hébergement web.</p>
+        <p>Adresse : 25 Avenue de l’Innovation, 69003 Lyon, France</p>
+        <p>Téléphone : +33 (0)4 56 78 90 12</p>
+        <p>Email : support@webpulsehosting.fr </p>
 
-    <h2>Ce site a été réalisé par :</h2>
-    <p>BLABLABLA</p>
-    <p>BLABLABLA</p>
-    <p>BLABLABLA</p>
+        <h2>3. Activité</h2>
+        <p>FootJersey SAS est une entreprise spécialisée dans la vente en ligne de maillots de football officiels et personnalisés. Notre objectif est de proposer aux passionnés de football des produits de qualité, authentiques et accessibles, en collaboration avec des marques reconnues et des clubs partenaires.</p>
+
+        <h2>4. Propriété intellectuelle</h2>
+        <p>L’ensemble des éléments présents sur le Site (textes, images, logos, vidéos, design, etc.) est la propriété exclusive de FootJersey SAS ou de ses partenaires. Toute reproduction, distribution, modification ou utilisation, même partielle, sans autorisation préalable écrite de FootJersey SAS est strictement interdite et passible de poursuites conformément aux lois en vigueur.</p>
+
+
+        <h2>5. Collecte et traitement des données personnelles</h2>
+        <p>Conformément au Règlement Général sur la Protection des Données (RGPD) et à la loi Informatique et Libertés du 6 janvier 1978 modifiée, FootJersey SAS collecte et traite les données personnelles des utilisateurs dans le cadre de la gestion des commandes, de la relation client et de l’amélioration de ses services.</p>
+        <p>our en savoir plus sur la gestion de vos données et exercer vos droits (accès, rectification, suppression, etc.), veuillez consulter notre Politique de confidentialité accessible sur le Site ou nous contacter à l’adresse : donnees@footjersey.com.</p>
+        
+        <h2>6. Conditions générales de vente</h2>
+        <p>Les ventes réalisées via le Site sont régies par nos Conditions Générales de Vente (CGV), consultables à tout moment sur la page dédiée. Elles définissent les droits et obligations des parties dans le cadre des transactions effectuées sur FootJersey.</p>
+
+        <h2>7. Litiges</h2>
+        <p>En cas de litige, les parties s’engagent à tenter une résolution amiable avant toute action judiciaire. À défaut, les tribunaux compétents sont ceux de Paris, et le droit applicable est le droit français.</p>
+    </main>
+    <footer>
+        <h4>Site Etudiant developpé par<br> Wallace Verron et Melisa Yilmaz</h4>
+        <ul>
+            <li><a href="./pages/credits.html">Mentions Légales</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
