Finalisation du projet

--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
         </section>
         <div class="conteneur">
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotReal.png" alt="Maillot Real"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotReal.png" alt="Maillot Real"></a>
                 <p>Maillot Real Madrid - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
@@ -109,22 +109,22 @@
         </section>
         <div class="conteneur">
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
@@ -137,22 +137,22 @@
         </section>
         <div class="conteneur">
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotUnited.png" alt="Maillot Manchester United"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotUnited.png" alt="Maillot Manchester United"></a>
                 <p>Maillot Manchester United - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotArsenal.png" alt="Maillot Arsenal"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotArsenal.png" alt="Maillot Arsenal"></a>
                 <p>Maillot Arsenal - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotAllemagne.png" alt="Maillot Allemagne"></a>
                 <p>Maillot Allemagne - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
@@ -165,22 +165,22 @@
         </section>
         <div class="conteneur">
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotLosc.png" alt="Maillot Losc"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotLosc.png" alt="Maillot Losc"></a>
                 <p>Maillot LOSC - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotMonaco.png" alt="Maillot Monaco"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotMonaco.png" alt="Maillot Monaco"></a>
                 <p>Maillot AS Monaco - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotOm.png" alt="Maillot Om"></a>
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotOm.png" alt="Maillot Om"></a>
                 <p>Maillot Olympique Marseille - Homme</p>
                 <h3>€20.50-€30.50</h3>
             </section>
             <section class="maillot">
-                <a href="/pages/fiche-produit.html"><img src="media/image/maillot/maillotCaen.png" alt="Maillot Caen">
+                <a href="pages/fiche-produit.html"><img src="media/image/maillot/maillotCaen.png" alt="Maillot Caen">
                 <p>Maillot Caen - Homme</p>
                 <h3>€20.50-€30.50</h3></a>
             </section>
@@ -189,7 +189,7 @@
     <footer>
         <h4>Site Etudiant developpé par<br> Wallace Verron et Melisa Yilmaz</h4>
         <ul>
-            <li><a href="./pages/credits.html">Mentions Légales</a></li>
+            <li><a href="pages/credits.html">Mentions Légales</a></li>
         </ul>
     </footer>
 </body>
